<resources>
    <string name="app_name">TodoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_your_email">Type your Email</string>
    <string name="signup">SignUp</string>
    <string name="type_your_password">Type your Password</string>
    <string name="confirm_your_password">Confirm your Password</string>
    <string name="already_have_a_account_login_here">Already have a account? Login here!</string>
    <string name="sign_in">Sign In</string>
    <string name="your_password_must_have_at_least_6_characters">* Your password must have at least 6 characters</string>
    <string name="type_your_task">Type your task here</string>
    <string name="type_your_description_here">Type your description here</string>
    <string name="type_your_desc_here">Type your desc here</string>
</resources>